# CSE486

Lecture2_intensity_surfaces_and_gradients/: CMakeLists.txt  main.cpp
Lecture4_smoothing/: CMakeLists.txt  main.cpp
